<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/colorPrimary"
              android:gravity="bottom"
              android:orientation="vertical">

    <TextView
        android:id="@+id/tv_to_comment"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/bottom_menu_comment"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/tv_collection"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/bottom_menu_collection"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/tv_to_share"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/bottom_menu_share"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/tv_lookup_pic"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/bottom_menu_look_up_pic"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/tv_add_to_blacklist"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/bottom_menu_add_to_blacklist"
        android:textColor="@color/colorBottomMenuRedText"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/bottom_menu_cancel"
        android:textSize="16sp"
        android:textStyle="bold"
        android:clickable="true"/>
</LinearLayout>