<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp">

    <RelativeLayout
        android:id="@+id/rl_com_basic_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/civ_com_user_avatar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/avatar"/>

        <TextView
            android:id="@+id/tv_com_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/civ_com_user_avatar"
            android:layout_marginStart="8dp"
            android:textSize="10sp"
            android:layout_centerVertical="true"
            android:text="@string/app_name"
            android:textColor="@color/colorTextUnselected"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_com_basic_info">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="14dp"
            android:layout_marginStart="46dp"
            android:layout_marginEnd="90dp"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_voice_com_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="2dp"
                android:layout_alignParentTop="true"
                android:text="@string/main_default_voice_length"
                android:textSize="10sp"
                android:textColor="@color/colorTextUnselected"/>

            <ImageView
                android:id="@+id/tv_com_content"
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:layout_toStartOf="@id/tv_voice_com_length"
                android:background="@drawable/bg_voice_bar"
                android:layout_centerVertical="true"/>


        </RelativeLayout>

        <TextView
            android:id="@+id/tv_com_like_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/main_default_watch_times"/>

        <ImageView
            android:id="@+id/iv_com_like_it"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/tv_com_like_num"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_main_voice_normal_like"
            android:contentDescription="@string/iv_con_des"/>
    </RelativeLayout>


</RelativeLayout>