<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_com"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_left"
                android:padding="4dp"
                android:contentDescription="@string/iv_con_des"/>
            <TextView
                android:id="@+id/tv_text_com"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_toEndOf="@id/iv_back"
                android:layout_marginStart="16dp"
                android:layout_centerVertical="true"
                android:text="@string/main_text_comments"
                android:textColor="@color/colorTextUnselected"/>

            <TextView
                android:id="@+id/tv_voice_com"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_toEndOf="@id/tv_text_com"
                android:layout_marginStart="16dp"
                android:layout_centerVertical="true"
                android:text="@string/main_voice_comments"
                android:textColor="@color/colorTextUnselected"/>

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <View
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorRecyclerViewItemDivider"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_com"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </android.support.v4.view.ViewPager>

</LinearLayout>